make tweet statistics readable on all themes (fixes #97)

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -1300,3 +1300,51 @@ div[data-testid=sidebarColumn] .gt2-dashboard-profile {
     padding: 10px 15px;
   }
 }
+
+// tweet analytics
+body[data-promote-url^="/i/tfb/v1/quick_promote"] {
+  background-color: var(--color-elem) !important;
+
+  .QuoteTweet {
+    border-color: var(--color-gray);
+  }
+
+  // buttons
+  .ep-ViewAllEngagementsButton,
+  .ep-InlineSignupButton {
+    color: white !important;
+    background-color: #55acee !important;
+  }
+
+  // seperators
+  .ep-Campaign,
+  .ep-DetailedEngagementsSection {
+    border-color: var(--color-shadow);
+  }
+
+  // text
+  .ProfileTweet-originalAuthor b,
+  .QuoteTweet-text,
+  .QuoteTweet-text b,
+  .QuoteTweet-text s,
+  .QuoteTweet-text span,
+  .ep-MetricName,
+  .ep-MetricValue span,
+  .ep-SectionTitle {
+    color: var(--color-text) !important;
+  }
+}
+
+// signup for tweet promoting
+body[data-payment-endpoint-path] {
+  background-color: var(--color-elem) !important;
+
+  .as-Label,
+  .as-SelectContainer {
+    color: var(--color-text);
+
+    option {
+      background-color: var(--color-elem);
+    }
+  }
+}
